--- a/examples/index.html
+++ b/examples/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="My Parse App">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.0.8/semantic.min.css">
-  <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.5.0.min.js"></script>
+  <script type="text/javascript" src="https://www.parsecdn.com/js/parse-1.5.0.min.js"></script>
 </head>
 
 <body>
