--- a/examples/index.html
+++ b/examples/index.html
@@ -5,7 +5,9 @@
   <title>My Parse App</title>
   <meta name="description" content="My Parse App">
   <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.0.8/semantic.min.css">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/JedWatson/react-select/master/dist/default.css">
   <script type="text/javascript" src="https://www.parsecdn.com/js/parse-1.5.0.min.js"></script>
 </head>
 
