fixed movie selection; implemented rating; auto login; implemented logout; major styling

--- a/examples/index.html
+++ b/examples/index.html
@@ -2,12 +2,15 @@
 <head>
   <meta charset="utf-8">
 
-  <title>My Parse App</title>
-  <meta name="description" content="My Parse App">
+  <title>Movie Night</title>
+  <meta name="description" content="Movie Night">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="rating/rating.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.0.8/semantic.min.css">
   <link rel="stylesheet" href="https://cdn.rawgit.com/JedWatson/react-select/master/dist/default.css">
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.0.8/semantic.min.js"></script>
   <script type="text/javascript" src="https://www.parsecdn.com/js/parse-1.5.0.min.js"></script>
 </head>
 
