--- a/examples/index.html
+++ b/examples/index.html
@@ -7,9 +7,11 @@
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="rating/rating.css">
+  <link rel="stylesheet" href="countdown/countdown.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.0.8/semantic.min.css">
   <link rel="stylesheet" href="https://cdn.rawgit.com/JedWatson/react-select/master/dist/default.css">
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.0.8/semantic.min.js"></script>
   <script type="text/javascript" src="https://www.parsecdn.com/js/parse-1.5.0.min.js"></script>
 </head>
